attempt to fix label spacing on safari mobile

--- a/public/styles/addTriangleTest.css
+++ b/public/styles/addTriangleTest.css
@@ -23,10 +23,9 @@ fieldset {
     border: none;
     display: flex;
     flex-direction: column;
-    gap: 0.25rem;
+    gap: 5px;
     padding: 0.5rem;
     transition: background-color 0.25s ease-in-out;
-    border-radius: 0.3rem;
 }
 
 fieldset.failed-validation {
